<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="italic"
        android:textSize="14sp"
        android:text="Share your wisdom"/>

    <EditText
        android:id="@+id/inQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="190dp">


        <ImageView
            android:id="@+id/blobOfJoke"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.62"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:srcCompat="@drawable/joke_inactive" />

        <ImageView
            android:id="@+id/blobOfHappiness"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:srcCompat="@drawable/happy_inactive" />

        <ImageView
            android:id="@+id/blobOfLove"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:srcCompat="@drawable/love_inactive" />

        <ImageView
            android:id="@+id/blobOfWisdom"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:srcCompat="@drawable/wisdom_inactive" />

        <ImageView
            android:id="@+id/blobOfDream"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:srcCompat="@drawable/dream_inactive" />

        <ImageView
            android:id="@+id/blobOfAngst"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:srcCompat="@drawable/angst_inactive" />

        <TextView
            android:id="@+id/liveText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select quote mood"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />
        <TextView
            android:id="@+id/liveTextDream"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_purple"
            android:visibility="gone"
            android:fontFamily="@font/funny"
            android:textSize="40sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />
        <TextView
            android:id="@+id/liveTextLove"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_pink"
            android:visibility="gone"
            android:fontFamily="@font/cute"
            android:textSize="75sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />
        <TextView
            android:id="@+id/liveTextHappiness"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_orange"
            android:visibility="gone"
            android:fontFamily="@font/sad"
            android:textSize="80sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />
        <TextView
            android:id="@+id/liveTextJoke"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_yellow"
            android:visibility="gone"
            android:fontFamily="@font/happy"
            android:textSize="45sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />
        <TextView
            android:id="@+id/liveTextWisdom"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_green"
            android:visibility="gone"
            android:fontFamily="@font/think"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />
        <TextView
            android:id="@+id/liveTextAngst"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_blue"
            android:visibility="gone"
            android:fontFamily="@font/inspo"
            android:textSize="40sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
