<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:background="@drawable/appbg"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:id="@+id/tapout"
    android:clickable="true"
    android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                        <LinearLayout
                            android:id="@+id/searchBlock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:background="@drawable/rounded_rect_bg_white_round"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginTop="4dp"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/editTextDate"
                            app:layout_constraintTop_toTopOf="parent">

                                <EditText
                                    android:id="@+id/searchBtn"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:layout_marginStart="16dp"
                                    android:hint="@string/search"
                                    android:textSize="16sp"
                                    android:visibility="gone"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/search"
                                    android:textSize="16sp"
                                    android:layout_gravity="center"
                                    android:textColor="#232323"
                                    android:paddingLeft="4dp"
                                    android:paddingBottom="4dp"
                                    android:layout_marginStart="4dp"/>

                                <ImageView
                                    android:id="@+id/imageView"
                                    android:layout_width="16dp"
                                    android:layout_margin="4dp"
                                    android:layout_height="16dp"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/magnifying_glass_gray" />


                        </LinearLayout>

                        <TextView
                            android:id="@+id/editTextDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:background="@drawable/rounded_rect_bg_white"
                            android:padding="4dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/date_format"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/searchBlock"
                            app:layout_constraintHorizontal_chainStyle="spread_inside"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/rounded_rect_bg">

                <TextView
                    android:id="@+id/quoteOfTheDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/quote_of_the_day"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    />

                <TextView
                    android:id="@+id/quoteOfTheDayDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_format"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias=".9"
                    app:layout_constraintHorizontal_bias=".9"
                    />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/monthName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_rect_bg_white"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:letterSpacing="1"
            android:text="@string/month_name"
            android:textAllCaps="false"
            android:textSize="24sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMain"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_rect_bg_white"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/day_list_item" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="24dp"
            app:srcCompat="@drawable/ic_add_white_36dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

